--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Cities-in-the-air_74171
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74171-h/images/cover.jpg
 creator:
   author:
     agent_name: Hamilton, Edmond
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/26787
     wikipedia: https://en.wikipedia.org/wiki/Edmond_Hamilton
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74171#Cities-in-the-air
 gutenberg_issued: '2024-08-01'
 gutenberg_type: Text
 identifiers:
